# cuda-fcnn

./: CMakeLists.txt  README.md  functions.cuh  main.cu  mat_main.cu  matmul_main.cu  nn.cu  nn.cuh
